Refactor stage #1: AReaL-lite (#154)
* PullRequest: 293 fix get_param_realloc_path

Merge branch xss/debug of git@code.alipay.com:inclusionAI/AReaL.git into gh
https://code.alipay.com/inclusionAI/AReaL/pull_requests/293

Reviewed-by: 博惟 <bowei.fw@antgroup.com>


* fix get_param_realloc_path

* PullRequest: 297 bugfix: reward is always -5

Merge branch xss/debug of git@code.alipay.com:inclusionAI/AReaL.git into gh
https://code.alipay.com/inclusionAI/AReaL/pull_requests/297

Reviewed-by: 博惟 <bowei.fw@antgroup.com>


* bugfix: reward is always -5

* PullRequest: 321 fix checkpoint save dir

Merge branch xss/debug of git@code.alipay.com:inclusionAI/AReaL.git into gh
https://code.alipay.com/inclusionAI/AReaL/pull_requests/321

Reviewed-by: 博惟 <bowei.fw@antgroup.com>


* fix checkpoint save dir

* add api

* add directory structure

* add tests template

* format

* checkout previous impl

* checkout previous implementations

* checkout prev impl

* add remote sglang engine

* format

* add readme

* PullRequest: 331 [lite] Support remote sglang engine with corresponding testcases.

Merge branch fw/lite of git@code.alipay.com:inclusionAI/AReaL.git into lite
https://code.alipay.com/inclusionAI/AReaL/pull_requests/331

Reviewed-by: 晓雷 <meizhiyu.mzy@antgroup.com>


* .
* add test for sglang remote engine
* fix

* PullRequest: 336 add wrapper

Merge branch lite-util-wrapper of git@code.alipay.com:inclusionAI/AReaL.git into lite
https://code.alipay.com/inclusionAI/AReaL/pull_requests/336

Reviewed-by: 博惟 <bowei.fw@antgroup.com>


* add wrapper

* PullRequest: 332 [lite] Support FSDP engines

Merge branch mzy/lite/engines of git@code.alipay.com:inclusionAI/AReaL.git into lite
https://code.alipay.com/inclusionAI/AReaL/pull_requests/332

Reviewed-by: 晓雷 <meizhiyu.mzy@antgroup.com>


* fsdp2 engine
* fix utils
* add fsdp engine test
* .
* fsdp engine test passed
* unsqueeze immediately before model inputs and after model outputts
* add optimizer save/load, add position id calculat

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -8,8 +8,12 @@ parts:
     chapters:
     - file: tutorial/installation
     - file: tutorial/quickstart
+    - file: tutorial/quickstart_legacy
     - file: tutorial/eval
     - file: tutorial/troubleshooting
+  - caption: Getting Started with AReaL-lite
+    chapters:
+    - file: lite/gsm8k_grpo
   - caption: References
     chapters:
     - file: references/benchmark
@@ -19,7 +23,7 @@ parts:
     - file: customization/dataset
     - file: customization/agent
     - file: customization/algorithm
-  - caption: Code Walkthrough
+  - caption: Code Walkthrough (Legacy)
     chapters:
     - file: developer/overview
     - file: developer/trainer
@@ -35,3 +39,8 @@ parts:
   - caption: Contributing
     chapters:
     - file: contrib
+  - caption: Customization (Legacy)
+    chapters:
+    - file: legacy/customization/dataset
+    - file: legacy/customization/agent
+    - file: legacy/customization/algorithm
