--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,6 @@ numba
 packaging
 pandas
 pybind11>=2.10.0
-numpy<2.0.0
 psutil
 pynvml
 pytest
@@ -69,4 +68,12 @@ word2number
 Pebble
 timeout-decorator
 prettytable
+gymnasium>=1.1.1
 swanlab[dashboard]
+torchdata
+autoflake
+tensordict
+deepspeed>=0.17.2
+pybase64
+msgspec
+transformers==4.53.1
